// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown level2 renders correctly with default values 1`] = `
<StyledDropdown
  canFlip={false}
  className=""
  contentClassName=""
  contentScrollable={false}
  dropdownLeftAligned={false}
  dropdownRightAligned={false}
  hasDarkShadow={false}
  hasShadow={false}
  iconName="menu-control-tiny"
  isActive={false}
  isLevel2={true}
  isNotHoverable={false}
  isStickedToParent={false}
  noChevron={false}
  onClose={null}
  onMouseEnter={null}
  toggle="Toggle"
  toggleAttrs={Object {}}
  toggleClassName=""
>
  <StyledDropdown__DropdownComponent
    as="li"
    className="is-level-2"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <li
      className="StyledDropdown__DropdownComponent-sc-1w57ze8-0 bVobta is-level-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <DropdownToggle
        attrs={Object {}}
        className=""
        iconName="menu-control-tiny"
        isLevel2={true}
        isTouchDevice={false}
        onClick={[Function]}
        toggleContent="Toggle"
      >
        <DropdownToggle
          attrs={Object {}}
          className="DropdownToggle-sc-1p907bm-1 gvIzNe"
          iconName="menu-control-tiny"
          isLevel2={true}
          isTouchDevice={false}
          onClick={[Function]}
          toggleContent="Toggle"
        >
          <div
            className="DropdownToggle-sc-1p907bm-1 gvIzNe"
            onClick={[Function]}
            role="button"
          >
            <span>
              Toggle
            </span>
            <DropdownToggle__ChevronIcon>
              <_default
                className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
              >
                <_default
                  className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
                >
                  <div
                    className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
                  />
                </_default>
              </_default>
            </DropdownToggle__ChevronIcon>
          </div>
        </DropdownToggle>
      </DropdownToggle>
      <DropdownContent
        className=""
        elementRef={
          Object {
            "current": <div
              class="DropdownContent-sc-1m1tfah-0 dKeZyS"
            />,
          }
        }
      >
        <Component
          className="DropdownContent-sc-1m1tfah-0 dKeZyS"
          elementRef={
            Object {
              "current": <div
                class="DropdownContent-sc-1m1tfah-0 dKeZyS"
              />,
            }
          }
        >
          <div
            className="DropdownContent-sc-1m1tfah-0 dKeZyS"
          />
        </Component>
      </DropdownContent>
    </li>
  </StyledDropdown__DropdownComponent>
</StyledDropdown>
`;

exports[`Dropdown level2 renders correctly with href set 1`] = `
<StyledDropdown
  attrs={
    Object {
      "href": "#",
    }
  }
  canFlip={false}
  className=""
  contentClassName=""
  contentScrollable={false}
  dropdownLeftAligned={false}
  dropdownRightAligned={false}
  hasDarkShadow={false}
  hasShadow={false}
  iconName="menu-control-tiny"
  isActive={false}
  isLevel2={true}
  isNotHoverable={false}
  isStickedToParent={false}
  noChevron={false}
  onClose={null}
  onMouseEnter={null}
  toggle="Toggle"
  toggleAttrs={Object {}}
  toggleClassName=""
>
  <StyledDropdown__DropdownComponent
    as="li"
    className="is-level-2"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <li
      className="StyledDropdown__DropdownComponent-sc-1w57ze8-0 bVobta is-level-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <DropdownToggle
        attrs={Object {}}
        className=""
        iconName="menu-control-tiny"
        isLevel2={true}
        isTouchDevice={false}
        onClick={[Function]}
        toggleContent="Toggle"
      >
        <DropdownToggle
          attrs={Object {}}
          className="DropdownToggle-sc-1p907bm-1 gvIzNe"
          iconName="menu-control-tiny"
          isLevel2={true}
          isTouchDevice={false}
          onClick={[Function]}
          toggleContent="Toggle"
        >
          <div
            className="DropdownToggle-sc-1p907bm-1 gvIzNe"
            onClick={[Function]}
            role="button"
          >
            <span>
              Toggle
            </span>
            <DropdownToggle__ChevronIcon>
              <_default
                className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
              >
                <_default
                  className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
                >
                  <div
                    className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
                  />
                </_default>
              </_default>
            </DropdownToggle__ChevronIcon>
          </div>
        </DropdownToggle>
      </DropdownToggle>
      <DropdownContent
        className=""
        elementRef={
          Object {
            "current": <div
              class="DropdownContent-sc-1m1tfah-0 dKeZyS"
            />,
          }
        }
      >
        <Component
          className="DropdownContent-sc-1m1tfah-0 dKeZyS"
          elementRef={
            Object {
              "current": <div
                class="DropdownContent-sc-1m1tfah-0 dKeZyS"
              />,
            }
          }
        >
          <div
            className="DropdownContent-sc-1m1tfah-0 dKeZyS"
          />
        </Component>
      </DropdownContent>
    </li>
  </StyledDropdown__DropdownComponent>
</StyledDropdown>
`;

exports[`Dropdown level2 renders correctly with isActive set 1`] = `
<StyledDropdown
  canFlip={false}
  className=""
  contentClassName=""
  contentScrollable={false}
  dropdownLeftAligned={false}
  dropdownRightAligned={false}
  hasDarkShadow={false}
  hasShadow={false}
  iconName="menu-control-tiny"
  isActive={true}
  isLevel2={true}
  isNotHoverable={false}
  isStickedToParent={false}
  noChevron={false}
  onClose={null}
  onMouseEnter={null}
  toggle="Toggle"
  toggleAttrs={Object {}}
  toggleClassName=""
>
  <StyledDropdown__DropdownComponent
    as="li"
    className="is-active is-level-2"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <li
      className="StyledDropdown__DropdownComponent-sc-1w57ze8-0 bVobta is-active is-level-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <DropdownToggle
        attrs={Object {}}
        className=""
        iconName="menu-control-tiny"
        isLevel2={true}
        isTouchDevice={false}
        onClick={[Function]}
        toggleContent="Toggle"
      >
        <DropdownToggle
          attrs={Object {}}
          className="DropdownToggle-sc-1p907bm-1 gvIzNe"
          iconName="menu-control-tiny"
          isLevel2={true}
          isTouchDevice={false}
          onClick={[Function]}
          toggleContent="Toggle"
        >
          <div
            className="DropdownToggle-sc-1p907bm-1 gvIzNe"
            onClick={[Function]}
            role="button"
          >
            <span>
              Toggle
            </span>
            <DropdownToggle__ChevronIcon>
              <_default
                className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
              >
                <_default
                  className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
                >
                  <div
                    className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
                  />
                </_default>
              </_default>
            </DropdownToggle__ChevronIcon>
          </div>
        </DropdownToggle>
      </DropdownToggle>
      <DropdownContent
        className=""
        elementRef={
          Object {
            "current": <div
              class="DropdownContent-sc-1m1tfah-0 dKeZyS"
            />,
          }
        }
      >
        <Component
          className="DropdownContent-sc-1m1tfah-0 dKeZyS"
          elementRef={
            Object {
              "current": <div
                class="DropdownContent-sc-1m1tfah-0 dKeZyS"
              />,
            }
          }
        >
          <div
            className="DropdownContent-sc-1m1tfah-0 dKeZyS"
          />
        </Component>
      </DropdownContent>
    </li>
  </StyledDropdown__DropdownComponent>
</StyledDropdown>
`;

exports[`Dropdown level2 renders correctly with isStickedToParent set 1`] = `
<StyledDropdown
  canFlip={false}
  className=""
  contentClassName=""
  contentScrollable={false}
  dropdownLeftAligned={false}
  dropdownRightAligned={false}
  hasDarkShadow={false}
  hasShadow={false}
  iconName="menu-control-tiny"
  isActive={false}
  isLevel2={true}
  isNotHoverable={false}
  isStickedToParent={true}
  noChevron={false}
  onClose={null}
  onMouseEnter={null}
  toggle="Toggle"
  toggleAttrs={Object {}}
  toggleClassName=""
>
  <StyledDropdown__DropdownComponent
    as="li"
    className="is-level-2 is-sticked-to-parent"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <li
      className="StyledDropdown__DropdownComponent-sc-1w57ze8-0 bVobta is-level-2 is-sticked-to-parent"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <DropdownToggle
        attrs={Object {}}
        className=""
        iconName="menu-control-tiny"
        isLevel2={true}
        isTouchDevice={false}
        onClick={[Function]}
        toggleContent="Toggle"
      >
        <DropdownToggle
          attrs={Object {}}
          className="DropdownToggle-sc-1p907bm-1 gvIzNe"
          iconName="menu-control-tiny"
          isLevel2={true}
          isTouchDevice={false}
          onClick={[Function]}
          toggleContent="Toggle"
        >
          <div
            className="DropdownToggle-sc-1p907bm-1 gvIzNe"
            onClick={[Function]}
            role="button"
          >
            <span>
              Toggle
            </span>
            <DropdownToggle__ChevronIcon>
              <_default
                className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
              >
                <_default
                  className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
                >
                  <div
                    className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
                  />
                </_default>
              </_default>
            </DropdownToggle__ChevronIcon>
          </div>
        </DropdownToggle>
      </DropdownToggle>
      <DropdownContent
        className=""
        elementRef={
          Object {
            "current": <div
              class="DropdownContent-sc-1m1tfah-0 dKeZyS"
            />,
          }
        }
      >
        <Component
          className="DropdownContent-sc-1m1tfah-0 dKeZyS"
          elementRef={
            Object {
              "current": <div
                class="DropdownContent-sc-1m1tfah-0 dKeZyS"
              />,
            }
          }
        >
          <div
            className="DropdownContent-sc-1m1tfah-0 dKeZyS"
          />
        </Component>
      </DropdownContent>
    </li>
  </StyledDropdown__DropdownComponent>
</StyledDropdown>
`;

exports[`Dropdown renders correctly with DropdownToggle and children 1`] = `
<StyledDropdown
  canFlip={false}
  className=""
  contentClassName=""
  contentScrollable={false}
  dropdownLeftAligned={false}
  dropdownRightAligned={false}
  hasDarkShadow={false}
  hasShadow={false}
  iconName="menu-control-tiny"
  isActive={false}
  isLevel2={false}
  isNotHoverable={false}
  isStickedToParent={false}
  noChevron={false}
  onClose={null}
  onMouseEnter={null}
  toggle="Toggle"
  toggleAttrs={Object {}}
  toggleClassName=""
>
  <StyledDropdown__DropdownComponent
    as="div"
    className=""
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="StyledDropdown__DropdownComponent-sc-1w57ze8-0 bVobta"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <DropdownToggle
        attrs={Object {}}
        className=""
        iconName="menu-control-tiny"
        isLevel2={false}
        isTouchDevice={false}
        onClick={[Function]}
        toggleContent="Toggle"
      >
        <DropdownToggle
          attrs={Object {}}
          className="DropdownToggle-sc-1p907bm-1 gvIzNe"
          iconName="menu-control-tiny"
          isLevel2={false}
          isTouchDevice={false}
          onClick={[Function]}
          toggleContent="Toggle"
        >
          <div
            className="DropdownToggle-sc-1p907bm-1 gvIzNe"
            onClick={[Function]}
            role="button"
          >
            <span>
              Toggle
            </span>
            <DropdownToggle__ChevronIcon>
              <_default
                className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
              >
                <_default
                  className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
                >
                  <div
                    className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
                  />
                </_default>
              </_default>
            </DropdownToggle__ChevronIcon>
          </div>
        </DropdownToggle>
      </DropdownToggle>
      <DropdownContent
        className=""
        elementRef={
          Object {
            "current": <div
              class="DropdownContent-sc-1m1tfah-0 dKeZyS"
            >
              <div>
                Content
              </div>
            </div>,
          }
        }
      >
        <Component
          className="DropdownContent-sc-1m1tfah-0 dKeZyS"
          elementRef={
            Object {
              "current": <div
                class="DropdownContent-sc-1m1tfah-0 dKeZyS"
              >
                <div>
                  Content
                </div>
              </div>,
            }
          }
        >
          <div
            className="DropdownContent-sc-1m1tfah-0 dKeZyS"
          >
            <div>
              Content
            </div>
          </div>
        </Component>
      </DropdownContent>
    </div>
  </StyledDropdown__DropdownComponent>
</StyledDropdown>
`;

exports[`Dropdown renders correctly with DropdownToggle, toggleIconName and children 1`] = `
<StyledDropdown
  canFlip={false}
  className=""
  contentClassName=""
  contentScrollable={false}
  dropdownLeftAligned={false}
  dropdownRightAligned={false}
  hasDarkShadow={false}
  hasShadow={false}
  iconName="menu-control-tiny"
  isActive={false}
  isLevel2={false}
  isNotHoverable={false}
  isStickedToParent={false}
  noChevron={false}
  onClose={null}
  onMouseEnter={null}
  toggle="Toggle"
  toggleAttrs={Object {}}
  toggleClassName=""
  toggleIconName="my-icon-name"
>
  <StyledDropdown__DropdownComponent
    as="div"
    className=""
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="StyledDropdown__DropdownComponent-sc-1w57ze8-0 bVobta"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <DropdownToggle
        attrs={Object {}}
        className=""
        iconName="menu-control-tiny"
        isLevel2={false}
        isTouchDevice={false}
        onClick={[Function]}
        toggleContent="Toggle"
      >
        <DropdownToggle
          attrs={Object {}}
          className="DropdownToggle-sc-1p907bm-1 gvIzNe"
          iconName="menu-control-tiny"
          isLevel2={false}
          isTouchDevice={false}
          onClick={[Function]}
          toggleContent="Toggle"
        >
          <div
            className="DropdownToggle-sc-1p907bm-1 gvIzNe"
            onClick={[Function]}
            role="button"
          >
            <span>
              Toggle
            </span>
            <DropdownToggle__ChevronIcon>
              <_default
                className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
              >
                <_default
                  className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
                >
                  <div
                    className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
                  />
                </_default>
              </_default>
            </DropdownToggle__ChevronIcon>
          </div>
        </DropdownToggle>
      </DropdownToggle>
      <DropdownContent
        className=""
        elementRef={
          Object {
            "current": <div
              class="DropdownContent-sc-1m1tfah-0 dKeZyS"
            >
              <div>
                Content
              </div>
            </div>,
          }
        }
      >
        <Component
          className="DropdownContent-sc-1m1tfah-0 dKeZyS"
          elementRef={
            Object {
              "current": <div
                class="DropdownContent-sc-1m1tfah-0 dKeZyS"
              >
                <div>
                  Content
                </div>
              </div>,
            }
          }
        >
          <div
            className="DropdownContent-sc-1m1tfah-0 dKeZyS"
          >
            <div>
              Content
            </div>
          </div>
        </Component>
      </DropdownContent>
    </div>
  </StyledDropdown__DropdownComponent>
</StyledDropdown>
`;

exports[`Dropdown renders correctly with default values 1`] = `
<StyledDropdown
  canFlip={false}
  className=""
  contentClassName=""
  contentScrollable={false}
  dropdownLeftAligned={false}
  dropdownRightAligned={false}
  hasDarkShadow={false}
  hasShadow={false}
  iconName="menu-control-tiny"
  isActive={false}
  isLevel2={false}
  isNotHoverable={false}
  isStickedToParent={false}
  noChevron={false}
  onClose={null}
  onMouseEnter={null}
  toggle="Toggle"
  toggleAttrs={Object {}}
  toggleClassName=""
>
  <StyledDropdown__DropdownComponent
    as="div"
    className=""
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="StyledDropdown__DropdownComponent-sc-1w57ze8-0 bVobta"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <DropdownToggle
        attrs={Object {}}
        className=""
        iconName="menu-control-tiny"
        isLevel2={false}
        isTouchDevice={false}
        onClick={[Function]}
        toggleContent="Toggle"
      >
        <DropdownToggle
          attrs={Object {}}
          className="DropdownToggle-sc-1p907bm-1 gvIzNe"
          iconName="menu-control-tiny"
          isLevel2={false}
          isTouchDevice={false}
          onClick={[Function]}
          toggleContent="Toggle"
        >
          <div
            className="DropdownToggle-sc-1p907bm-1 gvIzNe"
            onClick={[Function]}
            role="button"
          >
            <span>
              Toggle
            </span>
            <DropdownToggle__ChevronIcon>
              <_default
                className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
              >
                <_default
                  className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
                >
                  <div
                    className="DropdownToggle__ChevronIcon-sc-1p907bm-0 IqZgt"
                  />
                </_default>
              </_default>
            </DropdownToggle__ChevronIcon>
          </div>
        </DropdownToggle>
      </DropdownToggle>
      <DropdownContent
        className=""
        elementRef={
          Object {
            "current": <div
              class="DropdownContent-sc-1m1tfah-0 dKeZyS"
            />,
          }
        }
      >
        <Component
          className="DropdownContent-sc-1m1tfah-0 dKeZyS"
          elementRef={
            Object {
              "current": <div
                class="DropdownContent-sc-1m1tfah-0 dKeZyS"
              />,
            }
          }
        >
          <div
            className="DropdownContent-sc-1m1tfah-0 dKeZyS"
          />
        </Component>
      </DropdownContent>
    </div>
  </StyledDropdown__DropdownComponent>
</StyledDropdown>
`;
